# src/Http.API/ClientApp/src/app/share/models/user/user-filter-dto.model.ts
@@ -1,6 +1,5 @@
-import { Sex } from '../enum/sex.model';
 /**
- * 系统用户查询筛选
+ * 用户账户查询筛选
  */
 export interface UserFilterDto {
   pageIndex: number;
@@ -9,19 +8,11 @@ export interface UserFilterDto {
    * 排序
    */
   orderBy?: any | null;
+  /**
+   * 用户名
+   */
   userName?: string | null;
+  email?: string | null;
   emailConfirmed?: boolean | null;
-  phoneNumberConfirmed?: boolean | null;
-  twoFactorEnabled?: boolean | null;
-  lockoutEnabled?: boolean | null;
-  accessFailedCount?: number | null;
-  /**
-   * 密码重试次数
-   */
-  retryCount?: number | null;
-  /**
-   * 性别
-   */
-  sex?: Sex | null;
 
 }
