# src/Http.API/ClientApp/src/app/share/models/user/user-update-dto.model.ts
@@ -1,12 +1,12 @@
 /**
- * 系统用户更新时请求结构
+ * 用户账户更新时请求结构
  */
 export interface UserUpdateDto {
   userName?: string | null;
   /**
-   * 真实姓名
+   * 密码
    */
-  realName?: string | null;
+  password?: string | null;
   email?: string | null;
   emailConfirmed?: boolean | null;
 
