# src/Share/Models/UserDtos/UserFilterDto.cs
@@ -1,23 +1,22 @@
+using Core.Entities;
 namespace Share.Models.UserDtos;
 /// <summary>
-/// 系统用户查询筛选
+/// 用户账户查询筛选
 /// </summary>
+/// <inheritdoc cref="Core.Entities.User"/>
 public class UserFilterDto : FilterBase
 {
+    /// <summary>
+    /// 用户名
+    /// </summary>
+    [MaxLength(40)]
     public string? UserName { get; set; }
+    [MaxLength(100)]
+    public string? Email { get; set; }
     public bool? EmailConfirmed { get; set; }
+    // [MaxLength(100)]
     // public string? PasswordHash { get; set; }
+    // [MaxLength(60)]
     // public string? PasswordSalt { get; set; }
-    public bool? PhoneNumberConfirmed { get; set; }
-    public bool? TwoFactorEnabled { get; set; }
-    public bool? LockoutEnabled { get; set; }
-    public int? AccessFailedCount { get; set; }
-    /// <summary>
-    /// 密码重试次数
-    /// </summary>
-    public int? RetryCount { get; set; }
-    /// <summary>
-    /// 性别
-    /// </summary>
-    public Sex? Sex { get; set; }
+    
 }
