# src/Share/Models/UserDtos/UserUpdateDto.cs
@@ -1,16 +1,12 @@
+using Core.Entities;
 namespace Share.Models.UserDtos;
 /// <summary>
-/// 系统用户更新时请求结构
+/// 用户账户更新时请求结构
 /// </summary>
+/// <inheritdoc cref="Core.Entities.User"/>
 public class UserUpdateDto
 {
     public string? UserName { get; set; }
-    /// <summary>
-    /// 真实姓名
-    /// </summary>
-    [MaxLength(30)]
-    public string? RealName { get; set; }
-
     /// <summary>
     /// 密码
     /// </summary>
@@ -18,6 +14,5 @@ public class UserUpdateDto
     [MaxLength(100)]
     public string? Email { get; set; }
     public bool? EmailConfirmed { get; set; }
-    // public string? PasswordHash { get; set; }
-    // public string? PasswordSalt { get; set; }
+    
 }
